--- a/components/jaggery-apps/store/src/main/store/site/themes/wso2/css/component.css
+++ b/components/jaggery-apps/store/src/main/store/site/themes/wso2/css/component.css
@@ -1,3 +1,14 @@
+@font-face {
+	font-family: 'fontawesome';
+	src:url('../fonts/fontawesome/fontawesome.eot');
+	src:url('../fonts/fontawesome/fontawesome.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/fontawesome/fontawesome.woff') format('woff'),
+	url('../fonts/fontawesome/fontawesome.ttf') format('truetype'),
+	url('../fonts/fontawesome/fontawesome.svg#fontawesome') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 @-webkit-keyframes swing
 {
 	15%
@@ -67,10 +78,10 @@
 
 .page-header.main
 
-/* Main container */
+	/* Main container */
 .cbp-vm-switcher {
-/*	padding: 20px;
-	border: 3px solid #47a3da;  */
+	/*	padding: 20px;
+        border: 3px solid #47a3da;  */
 }
 
 /* options/select wrapper with switch anchors */
@@ -113,14 +124,14 @@
 }
 
 /* Clear eventual floats */
-.cbp-vm-switcher ul:before, 
-.cbp-vm-switcher ul:after { 
-	content: " "; 
-	display: table; 
+.cbp-vm-switcher ul:before,
+.cbp-vm-switcher ul:after {
+	content: " ";
+	display: table;
 }
 
-.cbp-vm-switcher ul:after { 
-	clear: both; 
+.cbp-vm-switcher ul:after {
+	clear: both;
 }
 
 .cbp-vm-switcher ul li {
@@ -182,7 +193,7 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 	padding: 0;
 }
 
-.cbp-vm-version, .cbp-vm-rating {
+.cbp-vm-price {
 	color: #c0c0c0;
 }
 
@@ -233,15 +244,15 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 
 /* Large grid view */
 .cbp-vm-view-grid ul {
-	text-align: left;
+	text-align: center;
 }
 
 .cbp-vm-view-grid ul.cbp-vm-recent li {
-/*	width: 23.4%; */
+	/*	width: 23.4%; */
 }
 
 .cbp-vm-view-grid ul li {
-	width: 15.4%;
+	width: 24%;
 	text-align: center;
 	/*padding: 18px;
 	min-height: 255px; */
@@ -249,25 +260,23 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 	display: inline-block;
 	vertical-align: top;
 	background-color: #ffffff;
-	margin: 0.5%;
 }
 
 .cbp-vm-view-grid .cbp-vm-title {
+	font-size: 1.3em;
 	max-width: none;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	margin-top: 20px;
 }
 
 .cbp-vm-view-grid .cbp-vm-details {
 	max-width: 300px;
 	min-height: 22px;
 	margin: 0 auto;
-} 
+}
 
-.cbp-vm-view-grid .cbp-vm-version,
-.cbp-vm-view-grid .cbp-vm-rating{
+.cbp-vm-view-grid .cbp-vm-price {
 	margin: 10px 0;
 	font-size: 1.2em;
 }
@@ -276,9 +285,6 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 
 .cbp-vm-view-grid .cbp-vm-blockmain:hover{ background-color: #ffffdd; }
 
-.cbp-vm-view-grid .thumbnail.icon {
-	max-height: 210px;
-}
 
 /* List view */
 .cbp-vm-view-list li {
@@ -304,8 +310,7 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 .cbp-vm-view-list .cbp-vm-image,
 .cbp-vm-view-list .cbp-vm-title,
 .cbp-vm-view-list .cbp-vm-details,
-.cbp-vm-view-list .cbp-vm-version,
-.cbp-vm-view-list .cbp-vm-rating,
+.cbp-vm-view-list .cbp-vm-price,
 .cbp-vm-view-list .cbp-vm-add {
 	display: inline-block;
 	vertical-align: middle;
@@ -325,8 +330,7 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 	word-break: break-all;
 }
 
-.cbp-vm-view-list .cbp-vm-version,
-.cbp-vm-view-list .cbp-vm-rating {
+.cbp-vm-view-list .cbp-vm-price {
 	font-size: 1.1em;
 	width: 10%;
 }
@@ -346,19 +350,6 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 
 .cbp-vm-view-list .cbp-vm-blockmain:hover{ background-color: #ffffdd}
 
-.cbp-vm-view-list .thumbnail.icon{
-	margin-bottom: 0rem;
-	padding: 5px 18px;
-	display: inline-block;
-	vertical-align: middle;
-	min-width: 150px;
-	min-height: 100px;
-}
-
-.cbp-vm-view-list .api-name-icon {
-	font-size: 5.5em;
-}
-
 /***** api-info style *****/
 
 .api-info-view {
@@ -372,12 +363,6 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 	-webkit-transition: border 0.2s ease-in-out;
 	-o-transition: border 0.2s ease-in-out;
 	transition: border 0.2s ease-in-out;
-	max-height: 220px;
-}
-
-.api-img-view{
-	width: 100px;
-	height: 100px;
 }
 
 .api-info-view .cbp-vm-image i {
@@ -401,7 +386,7 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 	.cbp-vm-view-list .cbp-vm-details  {
 		width: 30%;
 	}
-} 
+}
 
 @media screen and (max-width: 57em) {
 	.cbp-vm-view-grid ul li {
@@ -433,4 +418,3 @@ ul li:nth-child(odd) .cbp-vm-image i:hover {
 		width: 48%;
 	}
 }
-
